Games page finished

--- a/games.html
+++ b/games.html
@@ -20,16 +20,16 @@
         <div class="nav-container">
             <input type="checkbox">
             <ul class="header__nav">
-                <li><a href="/index">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/games">Games</a></li>
                 <li><a href="/team">Team</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
     </header>
-    <div class="main-container">
+    <div class="main-container games">
         <div class="main-container__content">
-            <h1>Games</h1>
+            <h1><span class="shapes-heading">Games</span></h1>
             <h2>In Development</h2>
             <div class="games-card">
                 <div class="games-card__image">
@@ -37,10 +37,10 @@
                 </div>
                 <div class="games-card__content">
                     <h3>Transhaping</h3>
-                    <p>Brief description about Transhaping! Here I go with the Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue ac urna id facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</p>
+                    <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape, find themselves and go through their journey of transition and tackle many struggles along the way.</p>
                     <div class="btn-group">
                         <a class="btn btn-main" href="#">Learn More</a>
-                        <span>Support us on <a>Kickstarter</a></span>
+                        <span>Support us on <a class="link-bold" href="https://tinyurl.com/transhaping">Kickstarter</a></span>
                     </div>
                 </div>
             </div>
