--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="nav-container">
             <input type="checkbox">
             <ul class="header__nav">
-                <li><a href="/index">Home</a></li>
-                <li><a href="/games">Games</a></li>
-                <li><a href="/team">Team</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/games.html">Games</a></li>
+                <li><a href="/team.html">Team</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
