about page templating

--- a/transhaping.html
+++ b/transhaping.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unbound Interactive | Games</title>
+    <title>Unbound Interactive</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -27,24 +27,9 @@
             </ul>
         </div>
     </header>
-    <div class="main-container games">
+    <div class="main-container">
         <div class="main-container__content">
-            <h1><span class="shapes-heading">Games</span></h1>
-            <h2>In Development</h2>
-            <div class="games-card">
-                <div class="games-card__image">
-                    <img src="https://picsum.photos/500/300">
-                </div>
-                <div class="games-card__content">
-                    <h3>Transhaping</h3>
-                    <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape, find themselves and go through their journey of transition and tackle many struggles along the way.</p>
-                    <div class="btn-group">
-                        <a class="btn btn-main" href="#">Learn More</a>
-                        <span>Support us on <a class="link-bold" href="https://tinyurl.com/transhaping">Kickstarter</a></span>
-                    </div>
-                </div>
-            </div>
-            <p class="games__soon">More games coming soon!</p>
+            <h1>Transhaping</h1>
         </div>
     </div>
     <footer class="footer">
