--- a/team.html
+++ b/team.html
@@ -66,9 +66,8 @@
                     </div>
                     <div class="card__footer">
                         <div class="btn-group">
-                            <a class="social-icon">1</a>
-                            <a class="social-icon">2</a>
-                            <a class="social-icon">3</a>
+                            <a class="social-icon fab fa-twitter-square" href="https://twitter.com/RyDesignsStuff" target="_blank"></a>
+                            <a class="social-icon fab fa-linkedin" href="https://www.linkedin.com/in/ryan-nisbet-a1b797150/" target="_blank"></a>
                         </div>
                     </div>
                 </div>
@@ -79,27 +78,26 @@
                                 <img src="https://picsum.photos/75">
                             </div>
                             <div class="card__header-title">
-                                <h3>Ryan</h3>
-                                <span>Community Manager/Lead Designer</span>
+                                <h3>Dylan</h3>
+                                <span>Programmer/Project Lead</span>
                             </div>
                         </div>
                     </div>
                     <div class="card__body">
-                        <p>Ryan is trans masc. He loves video games and anything creative. He makes the assets for our games as well as has input into the story, mechanics and much more.</p>
+                        <p>Dylan is an avid gamer who plays to chill out with people more than anything these days. He dabbles in just about any genre and is also in the LGBTQ+ community.</p>
                         <div class="card__facts">
                             <h4>Fun Facts</h4>
                             <ol>
-                                <li>Ryan mains D.va on Overwatch and has over 200 hours on her.</li>
-                                <li>He also plays bass and electric guitar.</li>
-                                <li>He studies website development at Staffordshire University.</li>
+                                <li>Dylan has played just about every old school PC RPG.</li>
+                                <li>He absolutely loves to read but never has the time for it.</li>
+                                <li>He is always up for making new friends!</li>
                             </ol>
                         </div>
                     </div>
                     <div class="card__footer">
                         <div class="btn-group">
-                            <a class="social-icon">1</a>
-                            <a class="social-icon">2</a>
-                            <a class="social-icon">3</a>
+                            <a class="social-icon fab fa-twitter-square" href="https://twitter.com/Disaster_Dylans" target="_blank"></a>
+                            <a class="social-icon fab fa-linkedin" href="https://www.linkedin.com/in/dylan-hetherington-1b6672143/" target="_blank"></a>
                         </div>
                     </div>
                 </div>
@@ -110,27 +108,26 @@
                                 <img src="https://picsum.photos/75">
                             </div>
                             <div class="card__header-title">
-                                <h3>Ryan</h3>
-                                <span>Community Manager/Lead Designer</span>
+                                <h3>Jane</h3>
+                                <span>Finance Manager/Developer</span>
                             </div>
                         </div>
                     </div>
                     <div class="card__body">
-                        <p>Ryan is trans masc. He loves video games and anything creative. He makes the assets for our games as well as has input into the story, mechanics and much more.</p>
+                        <p>Jane loves all kind of games and is a great developer. She also recently came out as MTF transgender.</p>
                         <div class="card__facts">
                             <h4>Fun Facts</h4>
                             <ol>
-                                <li>Ryan mains D.va on Overwatch and has over 200 hours on her.</li>
-                                <li>He also plays bass and electric guitar.</li>
-                                <li>He studies website development at Staffordshire University.</li>
+                                <li>Jane enjoys reading.</li>
+                                <li>She started gaming in generation 4.</li>
+                                <li>Jane plans to live forever.</li>
                             </ol>
                         </div>
                     </div>
                     <div class="card__footer">
                         <div class="btn-group">
-                            <a class="social-icon">1</a>
-                            <a class="social-icon">2</a>
-                            <a class="social-icon">3</a>
+                            <a class="social-icon fab fa-twitter-square" href="https://twitter.com/JaneCodes/" target="_blank"></a>
+                            <a class="social-icon fab fa-linkedin" href="https://www.linkedin.com/in/jane-sheppard-74392913b/" target="_blank"></a>
                         </div>
                     </div>
                 </div>
