--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>The tale of an extraordinary shape</p>
             <img src="assets/shapes.png" alt="Transhaping: The tale of an extraordinary shape" class="hero">
             <div class="btn-group">
-                <a class="btn btn-main" href="https://tinyurl.com/transhaping">Kickstarter</a>
+                <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
                 <a class="btn btn-ghost" href="#">Learn More</a>
             </div>
         </div>
