changing link paths

--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
         <div class="nav-container">
             <input type="checkbox">
             <ul class="header__nav">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/games.html">Games</a></li>
-                <li><a href="/team.html">Team</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/games">Games</a></li>
+                <li><a href="/team">Team</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -34,7 +34,7 @@
             <div class="contact__form">
                 
                 <h2>Get in Touch</h2>
-                <form name="contact" method="POST" action="/success.html" netlify>
+                <form name="contact" method="POST" action="/success" netlify>
                     <label for="name">
                         <input type="text" name="name" placeholder="Name..." required>
                     </label>
