--- a/success.html
+++ b/success.html
@@ -32,7 +32,7 @@
             <h1>Message Sent!</h1>
             <div class="content-box">
                 <p>Thank you for your message. We will get back to you as soon as possible!</p>
-                <a class="btn btn-main" href="/index.html">Return</a>
+                <a class="btn btn-main" href="/">Return</a>
             </div>
         </div>
     </div>
