minor tweaks - updating links

--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="/">
             <img src="/assets/logo.png">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
