--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="assets/shapes.png" alt="Transhaping: The tale of an extraordinary shape" class="hero">
             <div class="btn-group">
                 <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
-                <a class="btn btn-ghost" href="#">Learn More</a>
+                <a class="btn btn-ghost" href="/games/transhaping">Learn More</a>
             </div>
         </div>
     </div>
