--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="/">
             <img src="assets/logo.png">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
@@ -40,7 +40,7 @@
                     <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape, find themselves and go through their journey of transition and tackle many struggles along the way.</p>
                     <div class="btn-group">
                         <a class="btn btn-main" href="/games/transhaping">Learn More</a>
-                        <span>Support us on <a class="link-bold" href="https://tinyurl.com/transhaping">Kickstarter</a></span>
+                        <span>Support us on <a class="link-bold" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a></span>
                     </div>
                 </div>
             </div>
