--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -34,7 +34,7 @@
             <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
             <div class="section">
                 <div class="section__content">
-                    <img src="https://picsum.photos/400/200"">
+                    <img src="https://picsum.photos/400/200">
                     <div class="section__content-text">
                         <h2>What is Transhaping?</h2>
                         <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape find themselves and go through their journey of transition and tackle many struggles along the way. The player can choose the characters transition and pronouns from the start of the game.</p>
