added images and hamburger menu

--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unbound Interactive</title>
+    <title>Unbound Interactive | Transhaping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -17,15 +17,15 @@
                 <span>Unbound</span><span>Interactive</span>
             </div>
         </a>
-        <div class="nav-container">
-            <input type="checkbox">
-            <ul class="header__nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/games">Games</a></li>
-                <li><a href="/team">Team</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </div>
+        <span id="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </span>
+        <ul class="header__nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/games">Games</a></li>
+            <li><a href="/team">Team</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
     </header>
     <div class="main-container games-transhaping">
         <div class="main-container__content">
@@ -34,7 +34,7 @@
             <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
             <div class="section">
                 <div class="section__content">
-                    <img src="https://picsum.photos/400/200">
+                    <img src="/assets/image4.png">
                     <div class="section__content-text">
                         <h2>What is Transhaping?</h2>
                         <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape find themselves and go through their journey of transition and tackle many struggles along the way. The player can choose the characters transition and pronouns from the start of the game.</p>
@@ -43,7 +43,7 @@
             </div>
             <div class="section">
                 <div class="section__content">
-                    <img src="https://picsum.photos/400/200">
+                    <img src="/assets/image1.png">
                     <div class="section__content-text">
                         <h2>Gameplay</h2>
                         <p>The game itself will feature side-scrolling platforming and puzzle elements along with stealth game elements based around managing stress/dysphoria. As the player goes through the game their journey will unravel with a narrator overseeing the events and with the player character encountering other characters during their story.</p>
@@ -53,7 +53,7 @@
             </div>
             <div class="section">
                 <div class="section__content">
-                    <img src="https://picsum.photos/400/200">
+                    <img src="/assets/image3.png">
                     <div class="section__content-text">
                         <h2>Story and Importance</h2>
                         <p>The story has been constructed from the personal experiences of us (the development team) and that of our friends. We hope that by relating it to what we have gone through we will do the subject proud as it is a subject that is very near and dear to all of us and we feel an important experience to share with those curious or going through similar experiences.</p>
@@ -77,5 +77,6 @@
             <p class="copyright">Made with <a href="https://laurenwilkinson.co.uk" title="Lauren Wilkinson" target="_blank"><i class="fas fa-heart"></i></a> by <a href="https://laurenwilkinson.co.uk" target="_blank">Lauren</a></p>
         </div>
     </footer>
+    <script src="/main.js"></script>
 </body>
 </html>
