--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unbound Interactive</title>
+    <title>Unbound Interactive | Team</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -12,20 +12,20 @@
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="assets/logo.png">
+            <img src="/assets/logo.png">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
         </a>
-        <div class="nav-container">
-            <input type="checkbox">
-            <ul class="header__nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/games">Games</a></li>
-                <li><a href="/team">Team</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </div>
+        <span id="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </span>
+        <ul class="header__nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/games">Games</a></li>
+            <li><a href="/team">Team</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
     </header>
     <div class="main-container team">
         <div class="main-container__content">
@@ -45,7 +45,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="https://picsum.photos/75">
+                                <img src="/assets/ryanpicture.jpg">
                             </div>
                             <div class="card__header-title">
                                 <h3>Ryan</h3>
@@ -75,7 +75,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="https://picsum.photos/75">
+                                <img src="/assets/dylanpicture.jpg">
                             </div>
                             <div class="card__header-title">
                                 <h3>Dylan</h3>
@@ -105,7 +105,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="https://picsum.photos/75">
+                                <img src="/assets/janepicture.jpg">
                             </div>
                             <div class="card__header-title">
                                 <h3>Jane</h3>
@@ -144,5 +144,6 @@
             <p class="copyright">Made with <a href="https://laurenwilkinson.co.uk" title="Lauren Wilkinson" target="_blank"><i class="fas fa-heart"></i></a> by <a href="https://laurenwilkinson.co.uk" target="_blank">Lauren</a></p>
         </div>
     </footer>
+    <script src="/main.js"></script>
 </body>
 </html>
