--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -40,7 +40,7 @@
     <div class="main-container games-transhaping">
         <div class="main-container__content">
             <h1>Transhaping</h1>
-            <img src="https://picsum.photos/800/400" class="trailer">
+            <img src="/assets/shapes.png" class="trailer">
             <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
             <div class="section">
                 <div class="section__content">
