--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         <div class="main-container__content">
             <h1>Transhaping</h1>
             <p>The tale of an extraordinary shape</p>
-            <img src="assets/shapes.png" alt="Transhaping: The tale of an extraordinary shape" class="hero">
+            <picture class="hero">
+                <source srcset="assets/shapes.png" alt="Transhaping: The tale of an extraordinary shape" media="(min-width: 855px)">
+                <img src="assets/shapes-mobile.png">
+            </picture>
+            
             <div class="btn-group">
                 <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
                 <a class="btn btn-ghost" href="/games/transhaping">Learn More</a>
