added meta descriptions

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>The tale of an extraordinary shape</p>
             <picture class="hero">
                 <source srcset="assets/shapes.png" alt="Transhaping: The tale of an extraordinary shape" media="(min-width: 855px)">
-                <img src="assets/shapes-mobile.png">
+                <img src="assets/shapes-mobile.png" alt="Transhaping: The tale of an extraordinary shape">
             </picture>
             
             <div class="btn-group">
@@ -56,9 +56,9 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="btn-group">
-                <a class="social-icon" href="https://twitter.com/UnboundInt" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a class="social-icon" href="https://discord.gg/hBEuE59" target="_blank"><i class="fab fa-discord"></i></a>
-                <a class="social-icon" href="https://twitch.tv/UnboundInteractive" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a class="social-icon" href="https://twitter.com/UnboundInt" aria-label="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a class="social-icon" href="https://discord.gg/hBEuE59" aria-label="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+                <a class="social-icon" href="https://twitch.tv/UnboundInteractive" aria-label="Twitch" target="_blank"><i class="fab fa-twitch"></i></a>
             </div>
             <p class="copyright">Made with <a href="https://laurenwilkinson.co.uk" title="Lauren Wilkinson" target="_blank"><i class="fas fa-heart"></i></a> by <a href="https://laurenwilkinson.co.uk" target="_blank">Lauren</a></p>
         </div>
