added transhaping trailer

--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -42,7 +42,7 @@
         <div class="main-container__content">
             <h1>Transhaping</h1>
             <p>The tale of an extraordinary shape</p>
-            <img src="/assets/shapes.png" class="trailer">
+            <iframe class="trailer" src="https://www.youtube.com/embed/Wf0fuokbwYM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
             <div class="section">
                 <div class="section__content">
