removing kickstarter links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </picture>
             
             <div class="btn-group">
-                <a class="btn btn-main" href="https://tinyurl.com/transhaping" target="_blank">Kickstarter</a>
+                <a class="btn btn-main" href="https://twitch.tv/UnboundInteractive" target="_blank">Watch it Grow</a>
                 <a class="btn btn-ghost" href="/games/transhaping">Learn More</a>
             </div>
         </div>
