Adding charity page

--- a/charity.html
+++ b/charity.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Unbound Interactive | Games</title>
+    <title>Unbound Interactive | Charity Week</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the games we make at Unbound Interactive.">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
+    <meta name="description" content="Learn more about the Unbound Interactive charity week.">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,600,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.min.css" />
 
@@ -39,23 +39,28 @@
             <li><a href="/charity">Charity</a></li>
         </ul>
     </header>
-    <div class="main-container games">
+    <div class="main-container charity">
         <div class="main-container__content">
-            <h1><span class="shapes-heading">Games</span></h1>
-            <h2>In Development</h2>
-            <div class="games-card">
-                <div class="games-card__image">
-                    <img src="/assets/image2.png">
-                </div>
-                <div class="games-card__content">
-                    <h3>Transhaping</h3>
-                    <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape, find themselves and go through their journey of transition and tackle many struggles along the way.</p>
-                    <div class="btn-group">
-                        <a class="btn btn-main" href="/games/transhaping">Learn More</a>
-                    </div>
-                </div>
+            <h1><span class="shapes-heading">Charity</span></h1>
+            <h2>#UnboundCharityWeek</h2>
+            <div class="content-box">
+                <p>Having a community that support transgender people is incredibly important to us as a team. Therefore, we decided to dedicate the final week (Monday-Friday) of every month to raise money for transgender and LGBTQ+ charities.</p>
+                <p>We plan on doing at least one 6-hour charity livestream during this week as well as other events to raise money for the charities.</p>
+                <p>Check out the charities we have supported and plan to support in the future below.</p>
             </div>
-            <p class="games__soon">More games coming soon!</p>
+            <div class="content-box content-box--timeline">
+                <h3>November</h3>
+                <p class="subtitle">Mermaids UK</p>
+                <span class="subtitle--floating">26th - 30th November 2018</span>
+                <p>Mermaids is passionate about supporting children, young people, and their families to achieve a happier life in the face of great adversity. We work to raise awareness about gender nonconformity in children and young people amongst professionals and the public. We campaign for the recognition of gender dysphoria in young people and lobby for improvements in professional services.</p>
+            </div>
+            <div class="content-box content-box--timeline">
+                <h3>October</h3>
+                <p class="subtitle">The Trevor Project</p>
+                <span class="subtitle--floating">$100 raised in 24 hours</span>
+                <p>The Trevor Project is an American non-profit organization founded in 1998 focused on suicide prevention efforts among lesbian, gay, bisexual, transgender, and questioning youth. Through a toll-free telephone number, it operates The Trevor Lifeline, a confidential service that offers trained counsellors.</p>
+            </div>
+            
         </div>
     </div>
     <footer class="footer">
