--- a/success.html
+++ b/success.html
@@ -35,6 +35,7 @@
             <li><a href="/games">Games</a></li>
             <li><a href="/team">Team</a></li>
             <li><a href="/contact">Contact</a></li>
+            <li><a href="/charity">Charity</a></li>
         </ul>
     </header>
     <div class="main-container success">
