Updating trailer and adding pixel planet onto the games page

--- a/games.html
+++ b/games.html
@@ -42,7 +42,6 @@
     <div class="main-container games">
         <div class="main-container__content">
             <h1><span class="shapes-heading">Games</span></h1>
-            <h2>In Development</h2>
             <div class="games-card">
                 <div class="games-card__image">
                     <img src="/assets/image2.png">
@@ -51,8 +50,22 @@
                     <h3>Transhaping</h3>
                     <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape, find themselves and go through their journey of transition and tackle many struggles along the way.</p>
                     <div class="btn-group">
-                        <a class="btn btn-main" href="/games/transhaping">Learn More</a>
+                        <a class="btn btn-main" href="https://store.steampowered.com/app/1028950/Transhaping/" target="_blank">Buy Now</a>
+                        <a class="btn btn-secondary" href="/games/transhaping">Learn More</a>
                     </div>
+                </div>
+            </div>
+            <h2>In Development</h2>
+            <div class="games-card">
+                <div class="games-card__content">
+                    <h3>Pixel Planet</h3>
+                    <p>Based on an alternate version of our first successfully-backed game, Transhaping, in Pixel Planet, you are in that imaginary world to escape your parents. Jump over enemies, solve puzzles and do much more in this fun and exciting mini-game collection!</p>
+                    <div class="btn-group">
+                        <small>Kickstarter coming soon!</small>
+                    </div>
+                </div>
+                <div class="games-card__image">
+                    <img src="/assets/pixelplanet.jpg">
                 </div>
             </div>
             <p class="games__soon">More games coming soon!</p>
