--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -43,7 +43,7 @@
         <div class="main-container__content">
             <h1>Transhaping</h1>
             <p>The tale of an extraordinary shape</p>
-            <iframe class="trailer" src="https://www.youtube.com/embed/gj1m-fompjk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="trailer" src="https://www.youtube.com/embed/HIDsFFQ4pMA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="section">
                 <div class="section__content">
                     <img src="/assets/image4.png">
@@ -72,10 +72,6 @@
                         <p>It's important that no one going through a transition feels alone and we hope that this game will help others feel not alone and to know there are others out there going through the difficult process too.</p>
                     </div>
                 </div>
-            </div>
-            <div class="section--small">
-                <h2>Watch it Grow</h2>
-                <p>Watch our regular development/design and Q&A streams over at <a href="https://twitch.tv/UnboundInteractive" target="_blank">twitch.tv/UnboundInteractive</a>.</p>
             </div>
         </div>
     </div>
