--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </picture>
             
             <div class="btn-group">
-                <a class="btn btn-main" href="https://twitch.tv/UnboundInteractive" target="_blank">Watch it Grow</a>
+                <a class="btn btn-main" href="https://store.steampowered.com/app/1028950/Transhaping/" target="_blank">Buy Now</a>
                 <a class="btn btn-ghost" href="/games/transhaping">Learn More</a>
             </div>
         </div>
