Adding buy now link to transhaping page

--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -44,6 +44,7 @@
             <h1>Transhaping</h1>
             <p>The tale of an extraordinary shape</p>
             <iframe class="trailer" src="https://www.youtube.com/embed/HIDsFFQ4pMA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a class="btn btn-main" href="https://store.steampowered.com/app/1028950/Transhaping/" target="_blank">Buy Now on Steam</a>
             <div class="section">
                 <div class="section__content">
                     <img src="/assets/image4.png">
