Added kickstarter and demo buttons for pixel planet

--- a/games.html
+++ b/games.html
@@ -61,7 +61,8 @@
                     <h3>Pixel Planet</h3>
                     <p>Based on an alternate version of our first successfully-backed game, Transhaping, in Pixel Planet, you are in that imaginary world to escape your parents. Jump over enemies, solve puzzles and do much more in this fun and exciting mini-game collection!</p>
                     <div class="btn-group">
-                        <small>Kickstarter coming soon!</small>
+                        <a class="btn btn-main" href="http://tinyurl.com/pixelplanetkickstarter" target="_blank">Kickstarter</a>
+                        <a class="btn btn-secondary" href="https://unboundinteractive.itch.io/pixel-planet-demo" target="_blank">Play the Demo</a>
                     </div>
                 </div>
                 <div class="games-card__image">
