Adding robots.txt

--- a/charity.html
+++ b/charity.html
@@ -23,7 +23,7 @@
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="/assets/logo.png">
+            <img src="/assets/logo.png" alt="Logo">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
