--- a/games/transhaping.html
+++ b/games/transhaping.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Unbound Interactive | Transhaping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Transhaping is a non-binary inclusive transgender awareness platform-puzzle game.">
+    <meta name="description" content="Transhaping is a non-binary inclusive transgender awareness platform-puzzle game, the first game made by Unbound Interactive fully funded by Kickstarter!">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.min.css" />
@@ -23,7 +23,7 @@
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="/assets/logo.png">
+            <img src="/assets/logo.png" alt="Logo">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
@@ -47,7 +47,7 @@
             <a class="btn btn-main" href="https://store.steampowered.com/app/1028950/Transhaping/" target="_blank">Buy Now on Steam</a>
             <div class="section">
                 <div class="section__content">
-                    <img src="/assets/image4.png">
+                    <img src="/assets/image4.png" alt="">
                     <div class="section__content-text">
                         <h2>What is Transhaping?</h2>
                         <p>Transhaping is a non-binary inclusive transgender awareness platform-puzzle game. You play as a shape who is struggling to accept who they are. The player gets to experience the shape find themselves and go through their journey of transition and tackle many struggles along the way. The player can choose the characters transition and pronouns from the start of the game.</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="section">
                 <div class="section__content">
-                    <img src="/assets/image1.png">
+                    <img src="/assets/image1.png" alt="">
                     <div class="section__content-text">
                         <h2>Gameplay</h2>
                         <p>The game itself will feature side-scrolling platforming and puzzle elements along with stealth game elements based around managing stress/dysphoria. As the player goes through the game their journey will unravel with a narrator overseeing the events and with the player character encountering other characters during their story.</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="section">
                 <div class="section__content">
-                    <img src="/assets/image3.png">
+                    <img src="/assets/image3.png" alt="">
                     <div class="section__content-text">
                         <h2>Story and Importance</h2>
                         <p>The story has been constructed from the personal experiences of us (the development team) and that of our friends. We hope that by relating it to what we have gone through we will do the subject proud as it is a subject that is very near and dear to all of us and we feel an important experience to share with those curious or going through similar experiences.</p>
