--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Unbound Interactive | Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Get in contact with us by using the contact form or through social media.">
+    <meta name="description" content="Get in contact with the team by using the contact form or through social media. For just a casual chat or if you have any questions, join us on our discord!">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.min.css" />
@@ -23,7 +23,7 @@
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="/assets/logo.png">
+            <img src="/assets/logo.png" alt="Logo">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
