--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Unbound Interactive | Team</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Learn more about the Unbound Interactive development team.">
+    <meta name="description" content="Learn more about the Unbound Interactive team, made up of two developers Dylan and Jane, and Ryan the designer and community manager.">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,700|Nanum+Gothic+Coding" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.min.css" />
@@ -23,7 +23,7 @@
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="/assets/logo.png">
+            <img src="/assets/logo.png" alt="Logo">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
@@ -57,7 +57,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="/assets/ryanpicture.jpg">
+                                <img src="/assets/ryanpicture.jpg" alt="Ryan">
                             </div>
                             <div class="card__header-title">
                                 <h3>Ryan</h3>
@@ -87,7 +87,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="/assets/dylanpicture.jpg">
+                                <img src="/assets/dylanpicture.jpg" alt="Dylan">
                             </div>
                             <div class="card__header-title">
                                 <h3>Dylan</h3>
@@ -117,7 +117,7 @@
                     <div class="card__header">
                         <div class="card__header-inner">
                             <div class="card__header-image">
-                                <img src="/assets/janepicture.jpg">
+                                <img src="/assets/janepicture.jpg" alt="Jane">
                             </div>
                             <div class="card__header-title">
                                 <h3>Jane</h3>
