--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.min.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#120c40">
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#120c40">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#120c40">
 </head>
 <body>
     <header class="header">
         <a class="header__logo" href="/">
-            <img src="/assets/logo.png" alt="Logo">
+            <img src="assets/logo.png" alt="Logo">
             <div class="header__logo-text">
                 <span>Unbound</span><span>Interactive</span>
             </div>
