Remove netlify form
As this is no longer the official website for the company, I will remove the contact form functionality

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <h1><span class="shapes-heading">Contact</span></h1>
             <div class="contact__form">
                 <h2>Get in Touch</h2>
-                <form name="contact" method="POST" action="/success" netlify>
+                <form name="contact">
                     <label for="name">
                         <input type="text" name="name" placeholder="Name..." required>
                     </label>
